[Fixed] Homework Parts 22,23